feat: add Login, sendbird integration, user & channels crud, auth

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,20 +8,71 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
+  font-family: 'Roboto', sans-serif;
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.app {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+}
+
+.modal {
+  position: fixed;
+  background-color: rgba(0,0,0,0.4);
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-content {
+  position: relative;
+  top: 200px;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 8px;
+  border: 1px solid #888;
+  width: 480px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  border-radius: 5px;
+}
+
+.modal-content h2 {
+  font-weight: bold;
+  padding-bottom: 8px;
+}
+
+.modal-content input {
+  border: 1px solid #888;
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-body label {
+  padding-bottom: 4px;
+}
+
+.modal-body input {
+  padding: 2px 4px;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 8px;
+}
+
+.login {
+  margin: auto;
 }
